# autolab-wp

./: .gitignore  CMakeLists.txt  INSTALL  README  autolab-wp.pc.in
doc/: Makefile  README
src/: CMakeLists.txt  ccolor.cpp  ccolor.h  gridmap.cpp  gridmap.h  logwriter.cpp  logwriter.h  mapmarker.cpp  mapmarker.h  rgbcolor.cpp  rgbcolor.h  stagegridmap.cpp  stagegridmap.cpp~  stagegridmap.h  stagewavefrontmap.cpp  stagewavefrontmap.h  wavefrontmap.cpp  wavefrontmap.h  wavefrontmapdisplay.cpp  wavefrontmapdisplay.h  wavefrontmapvis.h
